--- a/solveeom/solveeom/solveeom.vcxproj
+++ b/solveeom/solveeom/solveeom.vcxproj
@@ -126,6 +126,9 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
+    <PostBuildEvent>
+      <Command>copy ..\Release\solveeom.dll ..\..\Assets\Plugins</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
