--- a/solveeom/solveeomcs/solveeomcs.csproj
+++ b/solveeom/solveeomcs/solveeomcs.csproj
@@ -79,7 +79,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy solveeomcs.dll ..\..\..\..\..\Assets\Plugins\x86_64
+    <PostBuildEvent>copy solveeomcs.dll ..\..\..\..\..\Assets\Plugins\x86
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
