ファイル追加

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,17 @@
 [Oo]bj/
 UnityGenerated/
 ProjectSettings/*.asset
+simplependulum_Data/
+simplependulum_x64_Data
+Assets/Plugins/
 
 # ----[ Visual Studio / MonoDevelop generated ]------- #
 
 Debug/
 x64/
+solveeom/Release/
+solveeom/x64/
+solveeom/solveeomcs/bin/
 ExportedObj/
 *.svd
 *.userprefs
@@ -41,3 +47,5 @@ Thumbs.db
 *.pdb
 *.exe
 *.csv
+*.dll
+/solveeom/.vs/solveeom/v15
